# backend/src/routes/measurements.js
@@ -1,0 +1,13 @@
+const express = require("express");
+
+const measurementMiddleware = require("../middlewares/measurements");
+const sharedMiddleware = require("../middlewares/shared");
+
+const router = express.Router();
+
+router.post("/:graphId", [
+    measurementMiddleware.createNewHealthMeasurement,
+    sharedMiddleware.sendNoResult,
+  ]);
+
+  module.exports = router;
